# AZ_Quality

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.supercrew/features/test-execution-tracking/: design.md  log.md  meta.yaml  plan.md
Doc/: Bug_status.md  Login.md  edge-mobile_sla_report_2026-02-11.html  quality-platform-requirements.md
app/: main.py
app/api/routes/: bugs.py
app/core/: auth.py  config.py  database.py  team_config.py
app/models/: bug.py
app/services/: bug_service.py  validator.py
config/teams/: edge_china_consumer.yaml  edge_mac.yaml  edge_mobile.yaml
docs/plans/: 2026-02-23-bug-status-design.md  2026-02-23-bug-status-implementation.md  2026-02-24-aad-login-design.md  2026-02-24-aad-login-implementation.md  2026-02-24-bug-status-dashboard-design.md  2026-02-24-bug-status-dashboard-implementation.md
frontend/: index.html  team.html
frontend/css/: style.css
frontend/js/: api.js  app.js  auth.js  charts.js  table.js
log/: pytest_configs.json
scripts/: check_query_fields.py  sync_bugs.py
tests/api/: test_bugs_api.py
tests/core/: test_config.py  test_team_config.py
tests/integration/: test_dashboard.py
tests/models/: test_bug.py
tests/scripts/: test_sync_bugs.py
tests/services/: test_bug_service.py  test_validator.py
